--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -32,6 +32,59 @@ daily_validation_task:
   clone_script:
     - git clone $CIRRUS_REPO_CLONE_URL .
   
+  # Validate shell scripts with ShellCheck
+  shellcheck_script:
+    - |
+      # Download and install ShellCheck directly from GitHub releases
+      echo "Installing ShellCheck from GitHub releases..."
+      
+      # Create a temporary directory for the download
+      TEMP_DIR=$(mktemp -d)
+      cd "$TEMP_DIR" || exit 1
+      
+      # Determine the correct binary for the platform
+      if [[ "$(uname -m)" == "arm64" ]]; then
+        # For Apple Silicon
+        SHELLCHECK_URL="https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.aarch64.tar.xz"
+      else
+        # For Intel Mac
+        SHELLCHECK_URL="https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.x86_64.tar.xz"
+      fi
+      
+      # Download and extract the ShellCheck binary
+      echo "Downloading ShellCheck from $SHELLCHECK_URL"
+      curl -sSL "$SHELLCHECK_URL" -o shellcheck.tar.xz
+      tar -xf shellcheck.tar.xz
+      
+      # Move the shellcheck binary to a directory in PATH
+      mkdir -p "$HOME/bin"
+      cp shellcheck-v0.9.0/shellcheck "$HOME/bin/"
+      chmod +x "$HOME/bin/shellcheck"
+      export PATH="$HOME/bin:$PATH"
+      
+      # Verify installation
+      cd - || exit 1
+      rm -rf "$TEMP_DIR"
+      echo "ShellCheck version: $(shellcheck --version | head -n 1)"
+      
+      # Run ShellCheck on all shell scripts
+      echo "Validating shell scripts with ShellCheck..."
+      
+      # Check specific important scripts
+      shellcheck -S warning setup.sh
+      shellcheck -S warning ci_modifiers.sh
+      shellcheck -S warning verify_setup.sh.template
+      
+      # Find and check any other shell scripts
+      find . -name "*.sh" -not -path "*/\.*" | while read -r script; do
+        if [[ "$script" != "./setup.sh" && "$script" != "./ci_modifiers.sh" ]]; then
+          echo "Checking $script..."
+          shellcheck -S warning "$script"
+        fi
+      done
+      
+      echo "All shell scripts validated successfully."
+  
   # Generate CI setup script by patching the original setup.sh
   prepare_script:
     - |
@@ -47,6 +100,11 @@ daily_validation_task:
         exit 1
       fi
       
+      # Validate the generated ci_setup.sh script
+      echo "Validating generated ci_setup.sh script..."
+      shellcheck -S warning ci_setup.sh
+      echo "ci_setup.sh validation complete."
+  
   # Create a test script to verify installations
   create_test_script:
     - cp verify_setup.sh.template verify_setup.sh
@@ -81,6 +139,59 @@ macos_arm_test_task:
   clone_script:
     - git clone $CIRRUS_REPO_CLONE_URL .
   
+  # Validate shell scripts with ShellCheck
+  shellcheck_script:
+    - |
+      # Download and install ShellCheck directly from GitHub releases
+      echo "Installing ShellCheck from GitHub releases..."
+      
+      # Create a temporary directory for the download
+      TEMP_DIR=$(mktemp -d)
+      cd "$TEMP_DIR" || exit 1
+      
+      # Determine the correct binary for the platform
+      if [[ "$(uname -m)" == "arm64" ]]; then
+        # For Apple Silicon
+        SHELLCHECK_URL="https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.aarch64.tar.xz"
+      else
+        # For Intel Mac
+        SHELLCHECK_URL="https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.x86_64.tar.xz"
+      fi
+      
+      # Download and extract the ShellCheck binary
+      echo "Downloading ShellCheck from $SHELLCHECK_URL"
+      curl -sSL "$SHELLCHECK_URL" -o shellcheck.tar.xz
+      tar -xf shellcheck.tar.xz
+      
+      # Move the shellcheck binary to a directory in PATH
+      mkdir -p "$HOME/bin"
+      cp shellcheck-v0.9.0/shellcheck "$HOME/bin/"
+      chmod +x "$HOME/bin/shellcheck"
+      export PATH="$HOME/bin:$PATH"
+      
+      # Verify installation
+      cd - || exit 1
+      rm -rf "$TEMP_DIR"
+      echo "ShellCheck version: $(shellcheck --version | head -n 1)"
+      
+      # Run ShellCheck on all shell scripts
+      echo "Validating shell scripts with ShellCheck..."
+      
+      # Check specific important scripts
+      shellcheck -S warning setup.sh
+      shellcheck -S warning ci_modifiers.sh
+      shellcheck -S warning verify_setup.sh.template
+      
+      # Find and check any other shell scripts
+      find . -name "*.sh" -not -path "*/\.*" | while read -r script; do
+        if [[ "$script" != "./setup.sh" && "$script" != "./ci_modifiers.sh" ]]; then
+          echo "Checking $script..."
+          shellcheck -S warning "$script"
+        fi
+      done
+      
+      echo "All shell scripts validated successfully."
+  
   # Generate CI setup script by patching the original setup.sh
   prepare_script:
     - |
@@ -96,6 +207,11 @@ macos_arm_test_task:
         exit 1
       fi
       
+      # Validate the generated ci_setup.sh script
+      echo "Validating generated ci_setup.sh script..."
+      shellcheck -S warning ci_setup.sh
+      echo "ci_setup.sh validation complete."
+  
   # Create a test script to verify installations
   create_test_script:
     - cp verify_setup.sh.template verify_setup.sh
