--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -35,36 +35,26 @@ daily_validation_task:
   # Validate shell scripts with ShellCheck
   shellcheck_script:
     - |
-      # Download and install ShellCheck directly from GitHub releases
-      echo "Installing ShellCheck from GitHub releases..."
-      
-      # Create a temporary directory for the download
-      TEMP_DIR=$(mktemp -d)
-      cd "$TEMP_DIR" || exit 1
-      
-      # Determine the correct binary for the platform
-      # Download the standalone binary directly
-      if [[ "$(uname -m)" == "arm64" ]]; then
-        # For Apple Silicon - use direct binary URL
-        echo "Downloading ShellCheck binary for Apple Silicon..."
-        curl -sSL "https://github.com/vscode-shellcheck/shellcheck-binaries/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.aarch64" -o shellcheck
+      # Check if Homebrew is installed, install if needed
+      if ! command -v brew &>/dev/null; then
+        echo "Installing Homebrew..."
+        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+        
+        # Add Homebrew to PATH for Apple Silicon Macs
+        if [[ "$(uname -m)" == "arm64" ]]; then
+          echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+          eval "$(/opt/homebrew/bin/brew shellenv)"
+        else
+          echo 'eval "$(/usr/local/bin/brew shellenv)"' >> ~/.zprofile
+          eval "$(/usr/local/bin/brew shellenv)"
+        fi
       else
-        # For Intel Mac - use direct binary URL
-        echo "Downloading ShellCheck binary for Intel Mac..."
-        curl -sSL "https://github.com/vscode-shellcheck/shellcheck-binaries/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.x86_64" -o shellcheck
+        echo "Homebrew is already installed."
       fi
       
-      # Make the binary executable
-      chmod +x shellcheck
-      
-      # Move the shellcheck binary to a directory in PATH
-      mkdir -p "$HOME/bin"
-      cp shellcheck "$HOME/bin/"
-      export PATH="$HOME/bin:$PATH"
-      
-      # Verify installation
-      cd - || exit 1
-      rm -rf "$TEMP_DIR"
+      # Install ShellCheck using Homebrew
+      echo "Installing ShellCheck using Homebrew..."
+      brew install shellcheck
       echo "ShellCheck version: $(shellcheck --version | head -n 1)"
       
       # Run ShellCheck on all shell scripts
@@ -142,36 +132,26 @@ macos_arm_test_task:
   # Validate shell scripts with ShellCheck
   shellcheck_script:
     - |
-      # Download and install ShellCheck directly from GitHub releases
-      echo "Installing ShellCheck from GitHub releases..."
-      
-      # Create a temporary directory for the download
-      TEMP_DIR=$(mktemp -d)
-      cd "$TEMP_DIR" || exit 1
-      
-      # Determine the correct binary for the platform
-      # Download the standalone binary directly
-      if [[ "$(uname -m)" == "arm64" ]]; then
-        # For Apple Silicon - use direct binary URL
-        echo "Downloading ShellCheck binary for Apple Silicon..."
-        curl -sSL "https://github.com/vscode-shellcheck/shellcheck-binaries/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.aarch64" -o shellcheck
+      # Check if Homebrew is installed, install if needed
+      if ! command -v brew &>/dev/null; then
+        echo "Installing Homebrew..."
+        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+        
+        # Add Homebrew to PATH for Apple Silicon Macs
+        if [[ "$(uname -m)" == "arm64" ]]; then
+          echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+          eval "$(/opt/homebrew/bin/brew shellenv)"
+        else
+          echo 'eval "$(/usr/local/bin/brew shellenv)"' >> ~/.zprofile
+          eval "$(/usr/local/bin/brew shellenv)"
+        fi
       else
-        # For Intel Mac - use direct binary URL
-        echo "Downloading ShellCheck binary for Intel Mac..."
-        curl -sSL "https://github.com/vscode-shellcheck/shellcheck-binaries/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.x86_64" -o shellcheck
+        echo "Homebrew is already installed."
       fi
       
-      # Make the binary executable
-      chmod +x shellcheck
-      
-      # Move the shellcheck binary to a directory in PATH
-      mkdir -p "$HOME/bin"
-      cp shellcheck "$HOME/bin/"
-      export PATH="$HOME/bin:$PATH"
-      
-      # Verify installation
-      cd - || exit 1
-      rm -rf "$TEMP_DIR"
+      # Install ShellCheck using Homebrew
+      echo "Installing ShellCheck using Homebrew..."
+      brew install shellcheck
       echo "ShellCheck version: $(shellcheck --version | head -n 1)"
       
       # Run ShellCheck on all shell scripts
