--- a/verify_setup.sh.template
+++ b/verify_setup.sh.template
@@ -106,6 +106,7 @@ total_checks=${#verify_commands}
 log_info "=== VERIFICATION TESTS ==="
 
 # Check each command with more detailed output
+# shellcheck disable=SC2296
 for cmd in ${(k)verify_commands}; do
   description=${verify_commands[$cmd]}
   printf "%-30s ... " "$description"
