Add Starship prompt configuration, testing, and documentation

--- a/verify_setup.sh.template
+++ b/verify_setup.sh.template
@@ -97,6 +97,7 @@ verify_commands=(
   ["rbenv"]="rbenv installation"
   ["pyenv"]="pyenv installation"
   ["direnv"]="direnv installation"
+  ["starship"]="Starship prompt"
 )
 
 # Counter for successful checks
