Fix Packer installation and improve documentation
- Remove deprecated homebrew/cask-fonts tap from Brewfile
- Add direct Packer installation from HashiCorp due to license changes
- Update verification script to test for Packer
- Add documentation about Packer's installation method and use with OrbStack

--- a/verify_setup.sh.template
+++ b/verify_setup.sh.template
@@ -98,6 +98,7 @@ verify_commands=(
   ["pyenv"]="pyenv installation"
   ["direnv"]="direnv installation"
   ["starship"]="Starship prompt"
+  ["packer"]="HashiCorp Packer"
 )
 
 # Counter for successful checks
@@ -151,7 +152,7 @@ else
 fi
 
 # Calculate final result
-total_checks=$((total_checks + 2))  # Adding the configuration checks
+total_checks=$((total_checks + 3))  # Adding the configuration checks including Packer
 log_info "=== SUMMARY ==="
 log_info "$success_count of $total_checks checks passed"
 
