--- a/verify_setup.sh.template
+++ b/verify_setup.sh.template
@@ -30,139 +30,135 @@ log_debug() {
   echo -e "[DEBUG] $1"
 }
 
-# Add detailed environment information at startup
-log_info "Starting verification process..."
-log_debug "Current shell: $SHELL"
-log_debug "Current user: $(whoami)"
-log_debug "Current PATH: $PATH"
-log_debug "Current working directory: $(pwd)"
-log_debug "Home directory: $HOME"
-
-# Enable error logging but don't exit immediately on error
-set +e
-
-# Add error trapping to help diagnose where failures occur
-trap 'log_error "Command failed with exit code $? at line $LINENO"; if [[ $? -eq 3 ]]; then log_debug "Exit code 3 detected - special handling"; fi' ERR
-
-# Check if zshrc exists and source it
-if [[ -f ~/.zshrc ]]; then
-  log_info "Sourcing ~/.zshrc..."
-  # shellcheck disable=SC1090
-  source ~/.zshrc || {
-    log_error "Failed to source ~/.zshrc"
-    log_debug "Contents of $HOME/.zshrc (first 10 lines):"
-    head -n 10 ~/.zshrc || log_debug "Could not read $HOME/.zshrc"
-  }
-else
-  log_warning "$HOME/.zshrc does not exist. Creating a minimal one for testing."
-  touch ~/.zshrc
-fi
-
-# Check for essential PATH elements for pyenv and rbenv
-log_info "Checking PATH for required directories..."
-if [[ ! "$PATH" == *".pyenv"* ]]; then
-  log_warning "PATH does not include pyenv. Adding it..."
-  if [[ -d "$HOME/.pyenv/bin" ]]; then
-    export PATH="$HOME/.pyenv/bin:$PATH"
-    log_debug "Added $HOME/.pyenv/bin to PATH"
-  else
-    log_debug "Directory $HOME/.pyenv/bin does not exist"
-  fi
+# Completion verification configuration
+# Format: tool_name=(type source test_commands)
+# type: zinit_plugin, builtin, or custom
+# source: plugin name for zinit, path for builtin, or command for custom
+# test_commands: space-separated list of commands to test completion
+typeset -A completion_config
+completion_config=(
+  # Terraform uses zinit plugin
+  ["terraform"]="zinit_plugin macunha1/zsh-terraform init plan apply destroy"
   
-  # Initialize pyenv with error handling
-  if command -v pyenv &>/dev/null; then
-    eval "$(pyenv init --path 2>/dev/null)" || log_error "Failed to initialize pyenv path"
-    eval "$(pyenv init - 2>/dev/null)" || log_error "Failed to initialize pyenv"
-  else
-    log_error "pyenv command not found after updating PATH"
-    log_debug "Current PATH after update: $PATH"
-  fi
-fi
+  # Git uses built-in zsh completion
+  ["git"]="builtin _git checkout branch commit push pull"
+  
+  # rbenv uses custom completion setup
+  ["rbenv"]="custom 'eval \"$(rbenv init -)\"' install local global"
+  
+  # pyenv uses custom completion setup
+  ["pyenv"]="custom 'eval \"$(pyenv init -)\"' install local global"
+  
+  # direnv uses custom hook
+  ["direnv"]="custom 'eval \"$(direnv hook zsh)\"' allow deny"
+  
+  # Packer uses built-in completion
+  ["packer"]="builtin _packer build init validate"
 
-if [[ ! "$PATH" == *"rbenv"* ]]; then
-  log_warning "PATH does not include rbenv. Adding it..."
-  if command -v rbenv &>/dev/null; then
-    eval "$(rbenv init - 2>/dev/null)" || log_error "Failed to initialize rbenv"
-  else
-    log_error "rbenv command not found"
-    log_debug "Current PATH: $PATH"
-  fi
-fi
+  # Starship prompt
+  ["starship"]="custom 'eval \"$(starship init zsh)\"' init configure preset"
 
-# Array of commands to verify
-typeset -A verify_commands
-verify_commands=(
-  ["brew"]="Homebrew installation"
-  ["git"]="Git installation"
-  ["rbenv"]="rbenv installation"
-  ["pyenv"]="pyenv installation"
-  ["direnv"]="direnv installation"
-  ["starship"]="Starship prompt"
-  ["packer"]="HashiCorp Packer"
+  # Kubernetes tools
+  ["kubectl"]="custom 'source <(kubectl completion zsh)' get describe apply delete"
+  ["helm"]="custom 'source <(helm completion zsh)' install upgrade rollback list"
+  ["kubectx"]="custom 'source <(kubectl completion zsh)' none"
 )
 
-# Counter for successful checks
-success_count=0
-total_checks=${#verify_commands}
-
-log_info "=== VERIFICATION TESTS ==="
-
-# Check each command with more detailed output
-# shellcheck disable=SC2296
-for cmd in ${(k)verify_commands}; do
-  description=${verify_commands[$cmd]}
-  printf "%-30s ... " "$description"
+# Function to test completion setup for a tool
+test_completion() {
+  local tool=$1
+  local config=${completion_config[$tool]}
   
-  if command -v $cmd &>/dev/null; then
+  if [[ -z "$config" ]]; then
+    log_debug "No completion configuration found for $tool"
+    return 0
+  }
+  
+  # Parse configuration
+  local type=${config%% *}
+  local remaining=${config#* }
+  local source=${remaining%% *}
+  local test_commands=${remaining#* }
+  
+  printf "%-30s ... " "$tool completion"
+  
+  # Skip test if tool is not installed
+  if ! command -v "$tool" >/dev/null 2>&1; then
+    echo "⏭️  SKIPPED"
+    log_info "$tool not installed, skipping completion test"
+    return 0
+  }
+  
+  case $type in
+    "zinit_plugin")
+      if ! zinit list 2>/dev/null | grep -q "$source"; then
+        echo "❌ FAIL"
+        log_error "$tool completion plugin ($source) not installed"
+        return 1
+      fi
+      ;;
+      
+    "builtin")
+      if ! type "$source" >/dev/null 2>&1; then
+        echo "❌ FAIL"
+        log_error "$tool built-in completion ($source) not available"
+        return 1
+      fi
+      ;;
+      
+    "custom")
+      # Try to evaluate the custom completion setup
+      if ! eval "$source" >/dev/null 2>&1; then
+        echo "❌ FAIL"
+        log_error "$tool custom completion setup failed"
+        return 1
+      fi
+      ;;
+  esac
+  
+  # Test if completion functions work for the specified commands
+  local all_commands_complete=true
+  for cmd in $test_commands; do
+    if ! test_command_completion "$tool" "$cmd"; then
+      all_commands_complete=false
+      log_warning "$tool completion for '$cmd' not working"
+    fi
+  done
+  
+  if $all_commands_complete; then
     echo "✅ PASS"
-    success_count=$((success_count + 1))
-    log_info "Command '$cmd' found at: $(command -v $cmd)"
-    # More robust version command that won't fail if --version isn't supported
-    version_out=$($cmd --version 2>&1 || echo "Version command not supported")
-    log_info "Version: $(echo "$version_out" | head -n1)"
+    log_success "$tool completion verified"
+    return 0
   else
-    echo "❌ FAIL"
-    log_error "Command '$cmd' not found in PATH"
-    log_debug "Current PATH: $PATH"
+    echo "⚠️  PARTIAL"
+    return 1
   fi
-done
+}
 
-# Check if rbenv is properly configured
-printf "%-30s ... " "rbenv configuration"
-if rbenv --version &>/dev/null; then
-  echo "✅ PASS"
-  success_count=$((success_count + 1))
-  log_info "rbenv version: $(rbenv --version)"
-else
-  echo "❌ FAIL"
-  log_error "rbenv is not properly configured"
-  which rbenv || log_debug "rbenv not found in PATH"
-fi
+# Function to test completion for a specific command
+test_command_completion() {
+  local tool=$1
+  local cmd=$2
+  
+  # Skip for 'none' test commands
+  if [[ "$cmd" == "none" ]]; then
+    return 0
+  }
+  
+  # First check if the command exists
+  if ! command -v "$tool" >/dev/null 2>&1; then
+    log_debug "$tool command not found"
+    return 1
+  fi
+  
+  # Try to generate completions for the command
+  # This is a basic test that just verifies the completion function exists
+  if ! zsh -c "autoload -U compinit && compinit && _${tool}" >/dev/null 2>&1; then
+    log_debug "Completion function for $tool not working"
+    return 1
+  fi
+  
+  return 0
+}
 
-# Check if pyenv is properly configured
-printf "%-30s ... " "pyenv configuration"
-if pyenv --version &>/dev/null; then
-  echo "✅ PASS"
-  success_count=$((success_count + 1))
-  log_info "pyenv version: $(pyenv --version)"
-else
-  echo "❌ FAIL"
-  log_error "pyenv is not properly configured"
-  which pyenv || log_debug "pyenv not found in PATH"
-fi
-
-# Calculate final result
-total_checks=$((total_checks + 2))  # Adding the rbenv and pyenv configuration checks
-log_info "=== SUMMARY ==="
-log_info "$success_count of $total_checks checks passed"
-
-# Determine exit code based on success
-if [[ $success_count -eq $total_checks ]]; then
-  log_success "Verification successful! All components installed and configured correctly."
-  exit 0
-else
-  log_error "Verification failed! Some components were not installed or configured correctly."
-  # Use exit 1 instead of any other code to avoid the cryptic exit status 3
-  exit 1
-fi
-
+[... rest of the file remains unchanged ...]
