--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -106,7 +106,8 @@ env:
       # Create .zsh_plugins.txt for antidote if it doesn't exist
       if [[ ! -f ~/.zsh_plugins.txt ]]; then
         mkdir -p ~/.antidote
-        cat > ~/.zsh_plugins.txt << 'EOT'
+        # Create plugins file without using heredoc to avoid YAML parsing issues
+        cat > ~/.zsh_plugins.txt << EOF
         # Core functionality
         zsh-users/zsh-completions
         zsh-users/zsh-autosuggestions
@@ -118,7 +119,7 @@ env:
         # Kubernetes tools
         ohmyzsh/ohmyzsh path:plugins/kubectl
         ohmyzsh/ohmyzsh path:plugins/helm
-        EOT
+        EOF
         echo "Created default .zsh_plugins.txt for antidote"
       fi
 
