fix: update ShellCheck source paths to handle home directory files

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -60,6 +60,7 @@ env:
         --external-sources \
         --source-path=SCRIPTDIR \
         --source-path="${PWD}/lib" \
+        --source-path="${HOME}" \
         --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
         ci_modifiers.sh setup.sh verify_setup.sh
 
@@ -100,6 +101,7 @@ env:
         --external-sources \
         --source-path=SCRIPTDIR \
         --source-path="${PWD}/lib" \
+        --source-path="${HOME}" \
         --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
         ci_setup.sh
       echo "ci_setup.sh validation complete."
@@ -219,6 +221,7 @@ daily_validation_task:
         --external-sources \
         --source-path=SCRIPTDIR \
         --source-path="${PWD}/lib" \
+        --source-path="${HOME}" \
         --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
         ci_modifiers.sh setup.sh verify_setup.sh
 
