fix: Streamline CI configuration and ensure proper tool installation order

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -44,6 +44,14 @@ env:
 .container_setup_template: &container_setup_template
   container_setup_script:
     - |
+      # Install Homebrew if needed
+      if ! command -v brew &>/dev/null; then
+        /bin/bash -c "$(curl -fsSL \
+          https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+        [[ "$(uname -m)" == "arm64" ]] && \
+          eval "$(/opt/homebrew/bin/brew shellenv)"
+      fi
+
       # Install OrbStack
       brew install --cask orbstack
 
@@ -75,14 +83,6 @@ env:
 .shellcheck_template: &shellcheck_template
   shellcheck_script:
     - |
-      # Install Homebrew if needed
-      if ! command -v brew &>/dev/null; then
-        /bin/bash -c "$(curl -fsSL \
-          https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        [[ "$(uname -m)" == "arm64" ]] && \
-          eval "$(/opt/homebrew/bin/brew shellenv)"
-      fi
-
       # Install ShellCheck
       brew install shellcheck
 
@@ -94,17 +94,6 @@ env:
         --source-path="${HOME}" \
         --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
         ci_modifiers.sh setup.sh verify_setup.sh
-
-# Template for system information (only used in daily validation)
-.system_info_template: &system_info_template
-  system_info_script:
-    - |
-      # Display system information for debugging
-      echo "=== System Information ==="
-      uname -a
-      sw_vers
-      echo "Shell: $SHELL"
-      echo "ZSH version: $(zsh --version)"
 
 # Template for CI setup script preparation
 .prepare_template: &prepare_template
@@ -222,82 +211,16 @@ env:
       path: "~/.zsh_plugins.txt"
       type: text/plain
 
-# Daily scheduled validation build
-daily_validation_task:
-  name: daily_compatibility_check
-  trigger_type: scheduled
-  cron: "0 0 * * *"  # Run at midnight UTC every day
-
-  # Include common configurations using templates
-  <<: *macos_instance_template
-  <<: *brew_cache_template
-  <<: *clone_template
-  <<: *container_setup_template
-  <<: *shellcheck_template
-
-  # Validate shell scripts with ShellCheck including system info
-  shellcheck_script:
-    - |
-      # Install Homebrew if needed
-      if ! command -v brew &>/dev/null; then
-        /bin/bash -c "$(curl -fsSL \
-          https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        [[ "$(uname -m)" == "arm64" ]] && \
-          eval "$(/opt/homebrew/bin/brew shellenv)"
-      fi
-
-      # Install ShellCheck
-      brew install shellcheck
-
-      # Validate shell scripts
-      shellcheck -s bash \
-        --external-sources \
-        --source-path=SCRIPTDIR \
-        --source-path="${PWD}/lib" \
-        --source-path="${HOME}" \
-        --exclude=SC1091,SC2296,SC2034,SC2154,SC2016 \
-        ci_modifiers.sh setup.sh verify_setup.sh
-
-      # Display system information for debugging
-      echo "=== System Information ==="
-      uname -a
-      sw_vers
-      echo "Shell: $SHELL"
-      echo "ZSH version: $(zsh --version)"
-
-  # Include remaining common configurations
-  <<: *prepare_template
-  <<: *create_test_template
-  <<: *setup_template
-  <<: *verify_template
-  <<: *artifacts_template
-
-# Task for testing the setup script on macOS ARM (on-demand)
-macos_arm_test_task:
-  name: macos_arm_test
-
-  # Include common configurations using templates
-  <<: *macos_instance_template
-  <<: *brew_cache_template
-  <<: *clone_template
-  <<: *container_setup_template
-  <<: *shellcheck_template
-  <<: *prepare_template
-  <<: *create_test_template
-  <<: *setup_template
-  <<: *verify_template
-  <<: *artifacts_template
-
 # Main validation task
 validate_task:
   name: validate_setup
   depends_on: []  # No dependencies for this task
 
-  # Use templates
+  # Use templates in the correct order
   <<: *macos_instance_template
   <<: *brew_cache_template
   <<: *clone_template
-  <<: *container_setup_template  # Add container setup before other steps
+  <<: *container_setup_template  # Install Docker and OrbStack first
   <<: *shellcheck_template
   <<: *prepare_template
   <<: *create_test_template
